<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundApp"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="163dp"
                android:layout_height="93dp"
                android:layout_marginTop="50dp"
                android:gravity="center_horizontal"
                android:text="@string/youtube_playlist_downloader"
                android:textColor="@color/colorText"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etPlaylistUrl"
                android:layout_width="220dp"
                android:layout_height="50dp"
                android:layout_marginTop="50dp"
                android:autofillHints=""
                android:backgroundTint="@color/colorEditTextUnderline"
                android:gravity="center_horizontal"
                android:hint="@string/playlist_url"
                android:textColorHint="@color/colorText"
                android:textColorHighlight="@color/colorText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <Button
                android:id="@+id/btnSavePlaylistUrl"
                android:layout_width="220dp"
                android:layout_height="50dp"
                android:layout_marginTop="4dp"
                android:backgroundTint="@color/colorButtonBackground"
                android:text="@string/save_link"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etPlaylistUrl" />

            <TextView
                android:id="@+id/tvDownloadPath"
                android:layout_width="323dp"
                android:layout_height="37dp"
                android:layout_marginTop="50dp"
                android:gravity="center_horizontal"
                android:text="@string/download_path"
                android:textColor="@color/colorText"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnSavePlaylistUrl" />

            <Button
                android:id="@+id/btnChooseDownloadPath"
                android:layout_width="220dp"
                android:layout_height="50dp"
                android:layout_marginTop="4dp"
                android:backgroundTint="@color/colorButtonBackground"
                android:text="@string/choose_path"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDownloadPath" />

            <Switch
                android:id="@+id/switchToggle"
                android:layout_width="125dp"
                android:layout_height="48dp"
                android:layout_marginTop="40dp"
                android:text="@string/toogle_downloader"
                android:textColor="@color/colorText"
                android:textSize="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnChooseDownloadPath"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <Button
                android:id="@+id/btnManualSync"
                android:layout_width="220dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/colorButtonBackground"
                android:text="@string/manual_sync"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/switchToggle" />

            <ImageButton
                android:id="@+id/btnGithubLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:backgroundTint="@color/colorBackgroundApp"
                android:contentDescription="@string/githubButtonDesc"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnManualSync"
                app:srcCompat="@drawable/github" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>